Bug #28701: Views don't have indexes. So they can't take index hints. Added a check and disabled the usage of hints for views.